--- a/assets/index.html
+++ b/assets/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default navbar_fundacion">
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
@@ -25,49 +25,106 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Brand</a>
+				<a class="navbar-brand" href="#">
+					<img src="images/logo.png" alt="Fundación niños y cáncer">
+				</a>
 			</div>
-
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-					<li><a href="#">Link</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-						<ul class="dropdown-menu">
-							<li><a href="#">Action</a></li>
-							<li><a href="#">Another action</a></li>
-							<li><a href="#">Something else here</a></li>
-							<li role="separator" class="divider"></li>
-							<li><a href="#">Separated link</a></li>
-							<li role="separator" class="divider"></li>
-							<li><a href="#">One more separated link</a></li>
-						</ul>
-					</li>
-				</ul>
-				<form class="navbar-form navbar-left">
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Search">
-					</div>
-					<button type="submit" class="btn btn-default">Submit</button>
-				</form>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Link</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-						<ul class="dropdown-menu">
-							<li><a href="#">Action</a></li>
-							<li><a href="#">Another action</a></li>
-							<li><a href="#">Something else here</a></li>
-							<li role="separator" class="divider"></li>
-							<li><a href="#">Separated link</a></li>
-						</ul>
-					</li>
+					<li><a href="#">INICIO</a></li>
+					<li><a href="#">NOSOTROS</a></li>
+					<li><a href="#">NOTICIAS</a></li>
 				</ul>
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
+
+	<header class="banner">
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+			<!-- Indicators -->
+			<ol class="carousel-indicators">
+				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				<li data-target="#myCarousel" data-slide-to="1"></li>
+				<li data-target="#myCarousel" data-slide-to="2"></li>
+				<li data-target="#myCarousel" data-slide-to="3"></li>
+			</ol>
+
+			<!-- Wrapper for slides -->
+			<div class="carousel-inner">
+				<div class="item active">
+					<img src="images/banner1.jpg" alt="Chania">
+					<div class="carousel-caption">
+						<h3>APOYAMOS</h3>
+						<p>Apoyamos al tratamiento en la enfermedad</p>
+					</div>
+				</div>
+
+				<div class="item">
+					<img src="images/banner2.jpg" alt="Chicago">
+					<div class="carousel-caption">
+						<h3>ESPACIOS</h3>
+						<p>Generamos espacios de recreación</p>
+					</div>
+				</div>
+
+				<div class="item">
+					<img src="images/banner3.jpg" alt="New York">
+					<div class="carousel-caption">
+						<h3>SOCIEDAD</h3>
+						<p>Integramos a la sociedad de becas y estudios</p>
+					</div>
+				</div>
+
+				<div class="item">
+					<img src="images/banner4.jpg" alt="New York">
+					<div class="carousel-caption">
+						<h3>SOLIDARIDAD</h3>
+						<p>Apoyo social y solidario</p>
+					</div>
+				</div>
+			</div>
+
+			<!-- Left and right controls -->
+			<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left"></span>
+				<span class="sr-only">Anterior</span>
+			</a>
+			<a class="right carousel-control" href="#myCarousel" data-slide="next">
+				<span class="glyphicon glyphicon-chevron-right"></span>
+				<span class="sr-only">Siguiente</span>
+			</a>
+		</div>
+	</header><!-- /header -->
+
+	<section class="Noticias">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3  noticia__destacada col-xs-1">
+					<a href="#">
+						<img src="" alt="Noticia">
+						<h3>Finalizó proceso de postulación a Becas</h3>
+						<p>El año 2018 se otorgaron un total de 28 becas de las cuales 15 corresponden alumnos antiguos y 13 son para alumnos que inician sus estudios superiores  este año 2018.</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-md-offset-1 noticia__destacada col-xs-1">
+					<a href="#">
+						<img src="" alt="Noticia">
+						<h3>Tallarinata de amor y sonrisas</h3>
+						<p>La velada estuvo animada por nuestro amigo y permanente colaborador Checho Hirane, además de contar con la extraordinaria presentación de Andrea Tessa y otros artistas invitados.</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-md-offset-1 noticia__destacada col-xs-1">
+					<a href="#">
+						<img src="" alt="Noticia">
+						<h3>Realización del Taller de Ski</h3>
+						<p>Se realizó como todos los años en Portillo del 21 al 25 de agosto y contó con la participación de 7 jóvenes chilenos, 2 ecuatorianos y 1 de España. Todos amputados de una extremidad inferior, como secuela de su enfermedad. </p>
+					</a>
+				</div>
+
+			</div>
+		</div>		
+	</section>
 
 
 
