--- a/assets/index.html
+++ b/assets/index.html
@@ -15,34 +15,37 @@
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
 	<!--Menú-->
-	<nav class="navbar navbar-default navbar_fundacion">
-		<div class="container-fluid">
-			<!-- Brand and toggle get grouped for better mobile display -->
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#">
-					<img src="images/logo.png" alt="Fundación niños y cáncer">
-				</a>
-			</div>
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">INICIO</a></li>
-					<li><a href="#">NOSOTROS</a></li>
-					<li><a href="#">NOTICIAS</a></li>
-				</ul>
-			</div><!-- /.navbar-collapse -->
-		</div><!-- /.container-fluid -->
-	</nav>
+	
 
 	<!--Banner -->
 	<header class="banner">
+		<nav class="navbar navbar-default navbar_fundacion">
+			<div class="container-fluid">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">
+						<img class="navbar_logo" src="images/logo.png" alt="Fundación niños y cáncer">
+					</a>
+				</div>
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav navbar-right navbar_derecha">
+						<li><a href="#">INICIO</a></li>
+						<li><a href="#">NOSOTROS</a></li>
+						<li><a href="#">NOTICIAS</a></li>
+					</ul>
+				</div><!-- /.navbar-collapse -->
+			</div><!-- /.container-fluid -->
+		</nav>
+
 		<div id="myCarousel" class="carousel slide" data-ride="carousel">
 			<!-- Indicators -->
 			<ol class="carousel-indicators">
@@ -178,7 +181,6 @@
 
 
 
-	
 
 	<!-- Jquery cdn -->
 	<script
