--- a/assets/index.html
+++ b/assets/index.html
@@ -9,7 +9,7 @@
 	<!--Bootstrap css-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!--Google Fonts-->
-
+	<link href="https://fonts.googleapis.com/css?family=Muli|Ubuntu:700" rel="stylesheet">
 	<!--/Google Fonts-->
 	<!--Estilo Propio-->
 	<link rel="stylesheet" href="css/styles.css">
@@ -27,23 +27,20 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">
+					<a class="navbar-brand" href="index.html">
 						<img class="navbar_logo" src="images/logo.png" alt="Fundación niños y cáncer">
 					</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right navbar_derecha">
-						<li><a href="#">INICIO</a></li>
+						<li><a href="index.html">FUNDACIÓN NIÑO Y CÁNCER</a></li>
 						<li><a href="#">NOSOTROS</a></li>
 						<li><a href="#">NOTICIAS</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
-
-	
-
 	<!--Banner -->
 	<header class="banner">
 		<div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -58,33 +55,33 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img src="images/banner1.jpg" alt="Chania">
+					<img src="images/banner1.jpg" alt="Fundacion niño y cancer">
 					<div class="carousel-caption">
-						<h3>APOYAMOS</h3>
+						<h1>APOYAMOS</h1>
 						<p>Apoyamos al tratamiento en la enfermedad</p>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="images/banner2.jpg" alt="Chicago">
+					<img src="images/banner2.jpg" alt="Fundacion niño y cancer">
 					<div class="carousel-caption">
-						<h3>ESPACIOS</h3>
+						<h1>ESPACIOS</h1>
 						<p>Generamos espacios de recreación</p>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="images/banner3.jpg" alt="New York">
+					<img src="images/banner3.jpg" alt="Fundacion niño y cancer">
 					<div class="carousel-caption">
-						<h3>SOCIEDAD</h3>
+						<h1>SOCIEDAD</h1>
 						<p>Integramos a la sociedad de becas y estudios</p>
 					</div>
 				</div>
 
 				<div class="item">
-					<img src="images/banner4.jpg" alt="New York">
+					<img src="images/banner4.jpg" alt="Fundacion niño y cancer">
 					<div class="carousel-caption">
-						<h3>SOLIDARIDAD</h3>
+						<h1>SOLIDARIDAD</h1>
 						<p>Apoyo social y solidario</p>
 					</div>
 				</div>
