--- a/assets/index.html
+++ b/assets/index.html
@@ -103,43 +103,47 @@
 	<section class="noticias">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-3  noticia__destacada col-xs-12">
+				<div class="col-md-3 noticia__destacada noticia__destacada__primera col-xs-12">
 					<a href="#">
-						<img src="images/noticia1.jpg" alt="Noticia">
+						<img src="images/noticia1.jpg" alt="Noticia" class="img-responsive">
 						<h3>Finalizó proceso de postulación a Becas</h3>
 						<p>El año 2018 se otorgaron un total de 28 becas de las cuales 15 corresponden alumnos antiguos y 13 son para alumnos que inician sus estudios superiores  este año 2018.</p>
 					</a>
 				</div>
 				<div class="col-md-3 col-md-offset-1 noticia__destacada col-xs-12">
 					<a href="#">
-						<img src="images/noticia2.jpg" alt="Noticia">
+						<img src="images/noticia2.jpg" alt="Noticia" class="img-responsive">
 						<h3>Tallarinata de amor y sonrisas</h3>
 						<p>La velada estuvo animada por nuestro amigo y permanente colaborador Checho Hirane, además de contar con la extraordinaria presentación de Andrea Tessa y otros artistas invitados.</p>
 					</a>
 				</div>
 				<div class="col-md-3 col-md-offset-1 noticia__destacada col-xs-12">
 					<a href="#">
-						<img src="images/noticia3.jpg" alt="Noticia">
+						<img src="images/noticia3.jpg" alt="Noticia" class="img-responsive">
 						<h3>Realización del Taller de Ski</h3>
 						<p>Se realizó como todos los años en Portillo del 21 al 25 de agosto y contó con la participación de 7 jóvenes chilenos, 2 ecuatorianos y 1 de España. Todos amputados de una extremidad inferior, como secuela de su enfermedad. </p>
 					</a>
 				</div>
 
-			</div>
-		</div>		
+			</div>		
+		</div>
+			
 	</section>
 
 	<!-- Donacion boton -->
 	<section class="jumbotron donacion">
-		<div class="row">
-			<div class="col-md-6 donacion__info">
-				<h2>Apóyenos</h2>
-				<p>Con su ayuda beneficiará el bienestar y tratamiento de un pequeño, cobtamos con sistema <span>WebPay</span></p>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 donacion__info">
+					<h2>Apóyenos</h2>
+					<p>Con su ayuda beneficiará el bienestar y tratamiento de un pequeño, cobtamos con sistema <span style="color: yellowgreen; font-weight: bold;">WebPay</span></p>
+				</div>
+				<div class="col-md-5 col-md-offset-1 donacion__boton">
+					<a href="#"><h4>DONAR</h4></a>
+				</div>		
 			</div>
-			<div class="col-md-6 donacion__boton">
-				<a href="#">DONAR</a>
-			</div>		
 		</div>
+		
 	</section>
 
 	<!-- Footer --> 
