--- a/assets/index.html
+++ b/assets/index.html
@@ -148,36 +148,39 @@
 
 	<!-- Footer --> 
 	<footer>
-		<div class="row">
-			<div class="col-md-4 footer_contacto">
-				<h3>Contacto</h3>
-				<p>	Dirección: Tupungato 10070 Vitacura, Santiago de Chile</br>
-					Teléfonos: 22170821 - 22170811</br>
-					Cta. Cte:Banco BCI N° 85999997</br>	  	
-					RUT: 72.169.900-5</br>
-					Email:fundacion@ninoycancer.cl</p>
-			</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 footer_contacto">
+					<h3>Contacto</h3>
+					<p>	Dirección: Tupungato 10070 Vitacura, Santiago de Chile</br>
+						Teléfonos: 22170821 - 22170811</br>
+						Cta. Cte:Banco BCI N° 85999997</br>	  	
+						RUT: 72.169.900-5</br>
+						Email:fundacion@ninoycancer.cl</p>
+				</div>
 
-			<div class="col-md-4 footer_formulario">
-				<h3>Escríbenos</h3>
-				<form class="navbar-form navbar-left" role="formulary">
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Nombre">
-						<input type="email" class="form-control" placeholder="Email">
+				<div class="col-md-4 footer_formulario">
+					<h3>Escríbenos</h3>
+					<form class="navbar-form navbar-left" role="formulary">
 						<div class="form-group">
-							<label for="comment">Mensaje</label>
-							<textarea class="form-control" rows="5" id="comment">Mensaje</textarea>
-						</div> 
-					</div>
-					<button type="submit" class="btn btn-default">Enviar</button>
-				</form>
-			</div>
+							<input type="text" class="form-control" placeholder="Nombre">
+							<input type="email" class="form-control" placeholder="Email">
+							<div class="form-group">
+								<label for="comment">Mensaje</label>
+								<textarea class="form-control" rows="5" id="comment">Mensaje</textarea>
+							</div> 
+						</div>
+						<button type="submit" class="btn btn-default">Enviar</button>
+					</form>
+				</div>
 
-			<div class="col-md-4 footer_mapa">
-				<iframe class=".embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.509134447668!2d-70.5393396848024!3d-33.38387898079302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses-419!2scl!4v1525816154018" width="300" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+				<div class="col-md-4 footer_mapa">
+					<iframe class=".embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.509134447668!2d-70.5393396848024!3d-33.38387898079302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses-419!2scl!4v1525816154018" width="300" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</div>
+				
 			</div>
-			
 		</div>
+		
 	</footer>
 
 
