--- a/assets/index.html
+++ b/assets/index.html
@@ -152,11 +152,10 @@
 			<div class="row">
 				<div class="col-md-4 footer_contacto">
 					<h3>Contacto</h3>
-					<p>	Dirección: Tupungato 10070 Vitacura, Santiago de Chile</br>
-						Teléfonos: 22170821 - 22170811</br>
-						Cta. Cte:Banco BCI N° 85999997</br>	  	
-						RUT: 72.169.900-5</br>
-						Email:fundacion@ninoycancer.cl</p>
+					<p>	<i class="fas fa-map-marker-alt"></i> Tupungato 10070 Vitacura, Santiago de Chile</br></br>
+						<i class="fas fa-phone"></i> 22170821 - 22170811</br></br><i class="fas fa-credit-card"></i> Cta.Cte Banco BCI N° 85999997</br></br>	  	
+						<i class="fas fa-user"></i> 72.169.900-5</br></br>
+						<i class="fas fa-envelope-open"></i> fundacion@ninoycancer.cl</p>
 				</div>
 
 				<div class="col-md-4 footer_formulario">
