--- a/assets/index.html
+++ b/assets/index.html
@@ -165,8 +165,7 @@
 							<input type="text" class="form-control" placeholder="Nombre">
 							<input type="email" class="form-control" placeholder="Email">
 							<div class="form-group">
-								<label for="comment">Mensaje</label>
-								<textarea class="form-control" rows="5" id="comment">Mensaje</textarea>
+								<textarea class="form-control" rows="4" cell="8" id="comment">Mensaje</textarea>
 							</div> 
 						</div>
 						<button type="submit" class="btn btn-default">Enviar</button>
@@ -174,7 +173,7 @@
 				</div>
 
 				<div class="col-md-4 footer_mapa">
-					<iframe class=".embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.509134447668!2d-70.5393396848024!3d-33.38387898079302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses-419!2scl!4v1525816154018" width="300" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.509134447668!2d-70.5393396848024!3d-33.38387898079302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses-419!2scl!4v1525816154018" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
 				
 			</div>
