links paginas nosotros y noticias

--- a/assets/index.html
+++ b/assets/index.html
@@ -35,8 +35,8 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right navbar_derecha">
 						<li><a href="index.html">FUNDACIÓN NIÑO Y CÁNCER</a></li>
-						<li><a href="#">NOSOTROS</a></li>
-						<li><a href="#">NOTICIAS</a></li>
+						<li><a href="nosotros.html">NOSOTROS</a></li>
+						<li><a href="noticias.html">NOTICIAS</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
