corrección ortográfica en el jumbotron

--- a/assets/index.html
+++ b/assets/index.html
@@ -136,7 +136,7 @@
 			<div class="row">
 				<div class="col-md-6 donacion__info">
 					<h2>Apóyenos</h2>
-					<p>Con su ayuda beneficiará el bienestar y tratamiento de un pequeño, cobtamos con sistema <span style="color: yellowgreen; font-weight: bold;">WebPay</span></p>
+					<p>Con su ayuda beneficiará el bienestar y tratamiento de un pequeño, contamos con sistema <span style="color: yellowgreen; font-weight: bold;">WebPay</span></p>
 				</div>
 				<div class="col-md-5 col-md-offset-1 donacion__boton">
 					<a href="#"><h4>DONAR</h4></a>
