--- a/assets/nosotros.html
+++ b/assets/nosotros.html
@@ -41,7 +41,22 @@
 			</div><!-- /.container-fluid -->
 		</nav>
 
+	<!--Hitoria--> 
+	<section class="quienes_somos">
+			<div class="container">
+				<div class="row">
+				<div class="col-md-6 quienes_somos_texto">
+					<h2>Quiénes Somos</h2>
+					<p>El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y fortaleciendo su integración social y familiar.</p>
 
+					<p>En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para atender solamente a niños con cáncer.</p>
+				</div>
+				<div class="col-md-6 quienes_somos_img">
+					
+				</div>
+			</div>
+		</div>
+	</section>
 
 
 
