--- a/assets/noticias.html
+++ b/assets/noticias.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!--viewport-->
 	<meta name="viewport" content="with=device=width, initial-scale-1">
-	<title>Fundación Niño y Cáncer</title>
+	<title>Noticias</title>
 	<!--Bootstrap css-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!--Google Fonts-->
@@ -40,6 +40,125 @@
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
+
+	<!-- Noticias Jumbotron --> 
+
+	<section class="jumbotron noticias__jumbotron">
+		<div class="container">
+			<h1>NOTICIAS</h1>	
+		</div>
+	</section>
+
+	<!--Noticias--> 
+	<section class="noticias">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-11 not_destacada">
+					<a href="#">
+						<img class="img-responsive" src="images/noticia4.jpg" alt="Noticia">
+						<h3>Agredecimiento del grupo de familias "Aprendiendo a revivir"</h3>
+						<p>En el año 2009, comenzamos a realizar reuniones trimestrales con los padres cuyos hijos habían fallecido a causa del cáncer infantil; al principio fue muy dificil, no sabíamos muy bien que ibamos a hacer, ni como lo ibamos a llevar a cabo. Al mes de noviembre del 2014, hemos realizado 18 encuentros, donde en un principio solo participaban las madres.</p>
+					</a>
+				</div>
+				<div class="col-md-3 noticia__destacada noticia__destacada__primera">
+					<a href="#">
+						<img class="img-responsive" src="images/noticia1.jpg" alt="Noticia">
+						<h3>Finalizó proceso de postulación a Becas</h3>
+						<p>El año 2018 se otorgaron un total de 28 becas de las cuales 15 corresponden alumnos antiguos y 13 son para alumnos que inician sus estudios superiores  este año 2018.</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-md-offset-1 noticia__destacada col-xs-12">
+					<a href="#">
+						<img src="images/noticia2.jpg" alt="Noticia" class="img-responsive">
+						<h3>Tallarinata de amor y sonrisas</h3>
+						<p>La velada estuvo animada por nuestro amigo y permanente colaborador Checho Hirane, además de contar con la extraordinaria presentación de Andrea Tessa y otros artistas invitados.</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-md-offset-1 noticia__destacada col-xs-12">
+					<a href="#">
+						<img src="images/noticia3.jpg" alt="Noticia" class="img-responsive">
+						<h3>Realización del Taller de Ski</h3>
+						<p>Se realizó como todos los años en Portillo del 21 al 25 de agosto y contó con la participación de 7 jóvenes chilenos, 2 ecuatorianos y 1 de España. Todos amputados de una extremidad inferior, como secuela de su enfermedad. </p>
+					</a>
+				</div>
+				<div class="col-md-3 noticia__destacada noticia__destacada__primera">
+					<a href="#">
+						<img class="img-responsive" src="images/noticia1.jpg" alt="Noticia">
+						<h3>Finalizó proceso de postulación a Becas</h3>
+						<p>El año 2018 se otorgaron un total de 28 becas de las cuales 15 corresponden alumnos antiguos y 13 son para alumnos que inician sus estudios superiores  este año 2018.</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-md-offset-1 noticia__destacada col-xs-12">
+					<a href="#">
+						<img src="images/noticia2.jpg" alt="Noticia" class="img-responsive">
+						<h3>Tallarinata de amor y sonrisas</h3>
+						<p>La velada estuvo animada por nuestro amigo y permanente colaborador Checho Hirane, además de contar con la extraordinaria presentación de Andrea Tessa y otros artistas invitados.</p>
+					</a>
+				</div>
+				<div class="col-md-3 col-md-offset-1 noticia__destacada col-xs-12">
+					<a href="#">
+						<img src="images/noticia3.jpg" alt="Noticia" class="img-responsive">
+						<h3>Realización del Taller de Ski</h3>
+						<p>Se realizó como todos los años en Portillo del 21 al 25 de agosto y contó con la participación de 7 jóvenes chilenos, 2 ecuatorianos y 1 de España. Todos amputados de una extremidad inferior, como secuela de su enfermedad. </p>
+					</a>
+				</div>
+			</div>			
+		</div>		
+	</section>
+
+	<!-- Donacion boton -->
+		<section class="jumbotron donacion">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6 donacion__info">
+						<h2>Apóyenos</h2>
+						<p>Con su ayuda beneficiará el bienestar y tratamiento de un pequeño, contamos con sistema <span style="color: yellowgreen; font-weight: bold;">WebPay</span></p>
+					</div>
+					<div class="col-md-5 col-md-offset-1 donacion__boton">
+						<a href="#"><h4>DONAR</h4></a>
+					</div>		
+				</div>
+			</div>
+			
+		</section>
+
+
+	<!-- Footer --> 
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 footer_contacto">
+					<h3>Contacto</h3>
+					<p>	<i class="fas fa-map-marker-alt"></i> Tupungato 10070 Vitacura, Santiago de Chile</br></br>
+						<i class="fas fa-phone"></i> 22170821 - 22170811</br></br><i class="fas fa-credit-card"></i> Cta.Cte Banco BCI N° 85999997</br></br>	  	
+						<i class="fas fa-user"></i> 72.169.900-5</br></br>
+						<i class="fas fa-envelope-open"></i> fundacion@ninoycancer.cl</p>
+				</div>
+
+				<div class="col-md-4 footer_formulario">
+					<h3>Escríbenos</h3>
+					<form class="navbar-form navbar-left" role="formulary">
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="Nombre">
+							<input type="email" class="form-control" placeholder="Email">
+							<div class="form-group">
+								<textarea class="form-control" rows="4" cell="8" id="comment">Mensaje</textarea>
+							</div> 
+						</div>
+						<button type="submit" class="btn btn-default">Enviar</button>
+					</form>
+				</div>
+
+				<div class="col-md-4 footer_mapa">
+					<iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.509134447668!2d-70.5393396848024!3d-33.38387898079302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses-419!2scl!4v1525816154018" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</div>
+				
+			</div>
+		</div>
+		
+	</footer>
+
+	
 
 
 
