--- a/assets/nosotros.html
+++ b/assets/nosotros.html
@@ -43,20 +43,82 @@
 
 	<!--Hitoria--> 
 	<section class="quienes_somos">
-			<div class="container">
-				<div class="row">
-				<div class="col-md-6 quienes_somos_texto">
-					<h2>Quiénes Somos</h2>
-					<p>El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y fortaleciendo su integración social y familiar.</p>
+		<div class="row">
+			<div class="col-md-7 quienes_somos_texto">
+				<h2>Quiénes Somos</h2>
+				<p>El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y fortaleciendo su integración social y familiar.</p>
 
-					<p>En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para atender solamente a niños con cáncer.</p>
-				</div>
-				<div class="col-md-6 quienes_somos_img">
-					
-				</div>
+				<p>En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para atender solamente a niños con cáncer.</p>
+			</div>
+			<div class="col-md-5 quienes_somos_img">
+				<img class="img-responsive" src="images/quienes_somos.jpg" alt="Quienes Somos">
 			</div>
 		</div>
 	</section>
+
+	<!--Nuestros Objetivos-->
+	<section class="nuestros_objetivos">
+		<div class="row">
+			<div class="col-md-7 nuestros_objetivos_img">
+				<img class="img-responsive" src="images/nuestros_objetivos.jpg" alt="Nuestros Objetivo">
+			</div>
+			<div class="col-md-5 nuestros_objetivos_texto">
+				<h2>Nuestros Objetivos </h2>
+				<p>La Fundación Niño y Cáncer es una entidad sin fines de lucro que nació para ser un importante apoyo en el tratamiento integral de los niños con cáncer o leucemia atendidos en el Sistema Público del país (Plan AUGE y GES) mejorando su calidad de vida y fortaleciendo su integración social y familiar.</p>
+			</div>
+		</div>		
+	</section>
+
+	<!-- Donacion boton -->
+	<section class="jumbotron donacion">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 donacion__info">
+					<h2>Apóyenos</h2>
+					<p>Con su ayuda beneficiará el bienestar y tratamiento de un pequeño, contamos con sistema <span style="color: yellowgreen; font-weight: bold;">WebPay</span></p>
+				</div>
+				<div class="col-md-5 col-md-offset-1 donacion__boton">
+					<a href="#"><h4>DONAR</h4></a>
+				</div>		
+			</div>
+		</div>
+		
+	</section>
+
+	<!-- Footer --> 
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 footer_contacto">
+					<h3>Contacto</h3>
+					<p>	<i class="fas fa-map-marker-alt"></i> Tupungato 10070 Vitacura, Santiago de Chile</br></br>
+						<i class="fas fa-phone"></i> 22170821 - 22170811</br></br><i class="fas fa-credit-card"></i> Cta.Cte Banco BCI N° 85999997</br></br>	  	
+						<i class="fas fa-user"></i> 72.169.900-5</br></br>
+						<i class="fas fa-envelope-open"></i> fundacion@ninoycancer.cl</p>
+				</div>
+
+				<div class="col-md-4 footer_formulario">
+					<h3>Escríbenos</h3>
+					<form class="navbar-form navbar-left" role="formulary">
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="Nombre">
+							<input type="email" class="form-control" placeholder="Email">
+							<div class="form-group">
+								<textarea class="form-control" rows="4" cell="8" id="comment">Mensaje</textarea>
+							</div> 
+						</div>
+						<button type="submit" class="btn btn-default">Enviar</button>
+					</form>
+				</div>
+
+				<div class="col-md-4 footer_mapa">
+					<iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.509134447668!2d-70.5393396848024!3d-33.38387898079302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses-419!2scl!4v1525816154018" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</div>
+				
+			</div>
+		</div>
+		
+	</footer>
 
 
 
