--- a/assets/nosotros.html
+++ b/assets/nosotros.html
@@ -94,7 +94,8 @@
 					<p>	<i class="fas fa-map-marker-alt"></i> Tupungato 10070 Vitacura, Santiago de Chile</br></br>
 						<i class="fas fa-phone"></i> 22170821 - 22170811</br></br><i class="fas fa-credit-card"></i> Cta.Cte Banco BCI N° 85999997</br></br>	  	
 						<i class="fas fa-user"></i> 72.169.900-5</br></br>
-						<i class="fas fa-envelope-open"></i> fundacion@ninoycancer.cl</p>
+						<i class="fas fa-envelope-open"></i> fundacion@ninoycancer.cl</br></br>
+						<a href="https://www.facebook.com/ninoycancer/"><i class="fab fa-facebook"></i></a> Fundación Niño y Cáncer</p>
 				</div>
 
 				<div class="col-md-4 footer_formulario">
