--- a/assets/nosotros.html
+++ b/assets/nosotros.html
@@ -60,7 +60,7 @@
 	<section class="nuestros_objetivos">
 		<div class="row">
 			<div class="col-md-7 nuestros_objetivos_img">
-				<img class="img-responsive" src="images/nuestros_objetivos.jpg" alt="Nuestros Objetivo">
+				<img class="img-responsive" src="images/nuestros_objetivos.JPG" alt="Nuestros Objetivo">
 			</div>
 			<div class="col-md-5 nuestros_objetivos_texto">
 				<h2>Nuestros Objetivos </h2>
